[gd_scene load_steps=31 format=3 uid="uid://btvjv40nthnhe"]

[ext_resource type="Texture2D" uid="uid://dmfmxynvep744" path="res://Assets/Sprites/BattleSprites/PCs/PlayerSheet.png" id="1_e88tv"]
[ext_resource type="Script" path="res://Scripts/Party/playerfinal.gd" id="1_xkmad"]
[ext_resource type="AudioStream" uid="uid://0ifh00uodwsk" path="res://Assets/Audio/Attack Hit 1.wav" id="3_0opsq"]
[ext_resource type="AudioStream" uid="uid://dikg70srig4on" path="res://Assets/Audio/JumpSFX.wav" id="4_bt4of"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ohxbh"]
atlas = ExtResource("1_e88tv")
region = Rect2(300, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc5hl"]
atlas = ExtResource("1_e88tv")
region = Rect2(0, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdbl7"]
atlas = ExtResource("1_e88tv")
region = Rect2(50, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kit7b"]
atlas = ExtResource("1_e88tv")
region = Rect2(100, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_s62nx"]
atlas = ExtResource("1_e88tv")
region = Rect2(150, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5e0v"]
atlas = ExtResource("1_e88tv")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouyuf"]
atlas = ExtResource("1_e88tv")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ldor"]
atlas = ExtResource("1_e88tv")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j5f8"]
atlas = ExtResource("1_e88tv")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw3g8"]
atlas = ExtResource("1_e88tv")
region = Rect2(100, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lqu2"]
atlas = ExtResource("1_e88tv")
region = Rect2(150, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkea"]
atlas = ExtResource("1_e88tv")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn3ug"]
atlas = ExtResource("1_e88tv")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i0e2"]
atlas = ExtResource("1_e88tv")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yshjl"]
atlas = ExtResource("1_e88tv")
region = Rect2(0, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yds81"]
atlas = ExtResource("1_e88tv")
region = Rect2(50, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_acjjn"]
atlas = ExtResource("1_e88tv")
region = Rect2(100, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw1ww"]
atlas = ExtResource("1_e88tv")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1hkj"]
atlas = ExtResource("1_e88tv")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5342b"]
atlas = ExtResource("1_e88tv")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcyrw"]
atlas = ExtResource("1_e88tv")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8jyn"]
atlas = ExtResource("1_e88tv")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnmay"]
atlas = ExtResource("1_e88tv")
region = Rect2(300, 37, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbqtq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohxbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc5hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdbl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kit7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s62nx")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5e0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5e0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouyuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouyuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ldor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ldor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j5f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j5f8")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw3g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lqu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn3ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i0e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yshjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn3ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i0e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yshjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn3ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i0e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yshjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yds81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acjjn")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw1ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1hkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5342b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcyrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8jyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnmay")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5nfwh"]
radius = 17.0
height = 78.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jabr0"]
size = Vector2(32.3308, 71.4286)

[node name="PlayerFinal" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(1.33, 1.33)
script = ExtResource("1_xkmad")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bbqtq")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5nfwh")

[node name="AttackPosR" type="Node2D" parent="."]
position = Vector2(65.4135, 0)

[node name="AttackPosL" type="Node2D" parent="."]
position = Vector2(-84.9624, 0)

[node name="AttackSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0opsq")
volume_db = -5.0

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bt4of")
volume_db = -10.0
pitch_scale = 0.9

[node name="CollisionPivot" type="Marker2D" parent="."]

[node name="AttackArea" type="Area2D" parent="CollisionPivot" groups=["Attack"]]
position = Vector2(39.6955, 0)
scale = Vector2(1.0352, 0.996512)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionPivot/AttackArea"]
shape = SubResource("RectangleShape2D_jabr0")
disabled = true

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
